remove pipenv file

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,6 @@ updates:
 - package-ecosystem: pip
   directory: "/"
   schedule:
-    interval: daily
-    time: "21:00"
+    interval: "weekly"
+    day: "monday"
   open-pull-requests-limit: 10
